--- a/product-guide-carousel/product-guide-carousel.css
+++ b/product-guide-carousel/product-guide-carousel.css
@@ -59,7 +59,6 @@
 
 .product-guide-item {
   align-items: flex-end;
-  background: green;
   background-size: cover;
   display: flex;
   height: 300px;
@@ -82,31 +81,31 @@
 }
 
 .product-guide-item--faucet {
-  background-image: url(/assets/images/hand_faucet.jpg);
+  background-image: url("/assets/images/hand_faucet.jpg");
 }
 
 .product-guide-item--switch {
-  background-image: url(/assets/images/hand_lamp_switch.jpg);
+  background-image: url("/assets/images/hand_lamp_switch.jpg");
 }
 
 .product-guide-item--pillow {
-  background-image: url(/assets/images/head_pillow.jpg);
+  background-image: url("/assets/images/head_pillow.jpg");
 }
 
 .product-guide-item--bins {
-  background-image: url(/assets/images/white_trash_bins.jpg);
+  background-image: url("/assets/images/white_trash_bins.jpg");
 }
 
 .product-guide-item--chair {
-  background-image: url(/assets/images/chair.jpg);
+  background-image: url("/assets/images/chair.jpg");
 }
 
 .product-guide-item--table {
-  background-image: url(/assets/images/gamlehult-chair-0d5143342879ccdb6499425b328816a6.jpg);
+  background-image: url("/assets/images/gamlehult-chair-0d5143342879ccdb6499425b328816a6.jpg");
 }
 
 .product-guide-item--meatballs {
- background-image: url(/assets/images/huvudroll-plant-balls-3e939a65b6b69abe566a5edd70d87c40.jpg);
+ background-image: url("/assets/images/huvudroll-plant-balls-3e939a65b6b69abe566a5edd70d87c40.jpg");
 }
 
 .product-guide-item__link {
@@ -118,6 +117,11 @@
   height: 40px;
   padding: 10px 25px;
   width: fit-content;
+}
+
+.product-guide-item__link:hover {
+  cursor: pointer;
+  background: #f5f5f5;
 }
 
 .product-guide-item__link--arrow {
