--- a/footer/footer.css
+++ b/footer/footer.css
@@ -3,7 +3,7 @@
 }
 
 .footer__main-container {
-  padding: 60px 20px;
+  padding: 60px 20px 0 20px;
   display: grid;
   row-gap: 60px;
 }
@@ -158,6 +158,7 @@
 .footer__options {
 	display: grid;
 	grid-template-rows: repeat(4, minmax(auto, max-content));
+  color: #484848;
 }
 
 .social-payment {
@@ -240,6 +241,7 @@
 .legal {
 	display: flex;
 	flex-wrap: wrap;
+  margin-bottom: 40px;
 }
 
 .legal-link {
@@ -259,4 +261,71 @@
 .legal-link:hover {
   cursor: pointer;
   text-decoration: underline;
+}
+
+@media screen and (min-width: 900px) {
+  .footer__main-container {
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr auto;
+    column-gap: 60px;
+    padding: 60px 40px 0 40px;
+  }
+
+  .footer__navs {
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr;
+    column-gap: 20px;
+  }
+
+  .list-nav {
+    border: none;
+    row-gap: 20px;
+    grid-template-rows: minmax(auto, max-content) 1fr;
+  }
+
+  .list-nav__top {
+    align-items: flex-start;
+    padding: 0;
+  }
+
+  .list-nav__icon {
+    display: none;
+  }
+
+  .list-nav__bottom {
+    max-height: 500px;
+  }
+
+  .list-nav__list {
+    opacity: 1;
+    padding: 0;
+  }
+
+  .footer__options {
+    grid-column: span 2;
+    grid-template-columns: 1fr minmax(auto, max-content);
+  }
+
+  .lang-options {
+    justify-self: flex-end;
+    align-self: flex-end;
+  }
+
+  .copyright {
+    margin-top: 20px;
+    border-top: 1px solid #dfdfdf;
+    padding-top: 40px;
+  }
+
+  .legal {
+    justify-content: flex-end;
+    margin-top: 20px;
+    border-top: 1px solid #dfdfdf;
+    padding-top: 40px;
+  }
+
+  .legal-link {
+    margin-right: 0;
+    margin-left: 20px;
+  }
 }
