--- a/page.css
+++ b/page.css
@@ -16,7 +16,7 @@ html {
 }
 
 .main {
-  padding: 40px 20px;
+  padding: 40px 20px 0 20px;
 }
 
 .section {
@@ -39,7 +39,7 @@ html {
   }
 
   .main {
-    padding: 60px 30px;
+    padding: 60px 30px 0 30px;
   }
 
   .section--carousel {
@@ -57,7 +57,7 @@ html {
   }
 
   .main {
-    padding: 60px 50px;
+    padding: 60px 50px 0 50px;
   }
 }
 
@@ -67,6 +67,6 @@ html {
   }
 
   .main {
-    padding: 60px 60px 60px 10%;
+    padding: 60px 60px 0 10%;
   }
 }
