--- a/campaign-carousel/campaign-carousel.css
+++ b/campaign-carousel/campaign-carousel.css
@@ -71,6 +71,10 @@
   cursor: pointer;
 }
 
+.campaign-item__banner:focus {
+  border: 2px solid #000000;
+}
+
 .campaign-item__img {
   aspect-ratio: 1 / 1;
   object-fit: cover;
