--- a/product-category-campaigns/product-category-campaigns.css
+++ b/product-category-campaigns/product-category-campaigns.css
@@ -13,6 +13,10 @@
   cursor: pointer;
 }
 
+.campaign-category__banner:focus {
+  border: 2px solid #000000;
+}
+
 .campaign-category__img {
   width: 100%;
 }
